[gd_scene load_steps=5 format=3 uid="uid://csjfy1tlx00ye"]

[ext_resource type="Script" uid="uid://dc03y205l16jd" path="res://Scripts/UI/pause_menu.gd" id="1_8rf44"]
[ext_resource type="FontFile" uid="uid://bun2qosgr1yav" path="res://Assets/UI/Fonts/Swiss 721 Extended Bold.otf" id="2_r2i2h"]
[ext_resource type="PackedScene" uid="uid://dcs5ofc5qadex" path="res://Scenes/UI/settings_menu.tscn" id="3_r2i2h"]
[ext_resource type="AudioStream" uid="uid://c65bsu2spn68c" path="res://Assets/SFX/UI/button-2.mp3" id="4_oykix"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8rf44")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="label_Title" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_r2i2h")
theme_override_font_sizes/font_size = 64
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttons_container" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="btn_resume" type="Button" parent="PanelContainer/VBoxContainer/buttons_container"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_r2i2h")
theme_override_font_sizes/font_size = 32
text = "RESUME"

[node name="btn_settings" type="Button" parent="PanelContainer/VBoxContainer/buttons_container"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_r2i2h")
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="btn_mainmenu" type="Button" parent="PanelContainer/VBoxContainer/buttons_container"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_r2i2h")
theme_override_font_sizes/font_size = 32
text = "RETURN MAIN MENU"

[node name="SettingsMenu" parent="." instance=ExtResource("3_r2i2h")]
visible = false
layout_mode = 1

[node name="btn_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_oykix")

[connection signal="pressed" from="PanelContainer/VBoxContainer/buttons_container/btn_resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/buttons_container/btn_settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/buttons_container/btn_mainmenu" to="." method="_on_btn_mainmenu_pressed"]
